// Copy this text, paste to https://dbdiagram.io/d
// Or, https://databasediagram.com/app
// Or, view in VSCode with extension: "DBML Live Preview"

Project DBML {
  Note: '''
Customer: Represents a customer of the company.
Department: Represents a department within the company.
Employee: Represents an employee in the organization.
EmployeeProject: Junction table linking employees to projects.
Project: Represents a project handled by the company.
Inventory: Represents inventory details for products.
Product: Represents a product available for sale.
Order: Represents an order made by a customer.
OrderItem: Represents the relationship between orders and products.
Position: Represents the position or role of an employee.
Shipment: Represents a shipment sent by a vendor.
Vendor: Represents a vendor supplying products.
'''
}

Table Customer {
    id INTEGER [primary key]
    first_name VARCHAR 
    last_name VARCHAR 
    email VARCHAR 
    }

Table Department {
    id INTEGER [primary key]
    name VARCHAR 
    location VARCHAR 
    }

Table Employee {
    id INTEGER [primary key]
    first_name VARCHAR 
    last_name VARCHAR 
    hire_date DATETIME 
    }

Table EmployeeProject {
    id INTEGER [primary key]
    employee_id INTEGER 
    project_id INTEGER 
    }

Table Project {
    id INTEGER [primary key]
    project_name VARCHAR 
    start_date DATETIME 
    }

Table Inventory {
    id INTEGER [primary key]
    product_id INTEGER 
    quantity_in_stock INTEGER 
    }

Table Product {
    id INTEGER [primary key]
    name VARCHAR 
    price FLOAT 
    }

Table Order {
    id INTEGER [primary key]
    customer_id INTEGER 
    order_date DATETIME 
    total_amount FLOAT 
    }

Table OrderItem {
    id INTEGER [primary key]
    order_id INTEGER 
    product_id INTEGER 
    quantity INTEGER 
    }

Table Position {
    id INTEGER [primary key]
    title VARCHAR 
    salary FLOAT 
    }

Table Shipment {
    id INTEGER [primary key]
    vendor_id INTEGER 
    shipment_date DATETIME 
    }

Table Vendor {
    id INTEGER [primary key]
    name VARCHAR 
    contact_info VARCHAR 
    }



// Relationships
    Ref: EmployeeProject.(employee_id) < Employee.(id)
    Ref: EmployeeProject.(project_id) < Project.(id)
    Ref: Inventory.(product_id) < Product.(id)
    Ref: Order.(customer_id) < Customer.(id)
    Ref: OrderItem.(order_id) < Order.(id)
    Ref: OrderItem.(product_id) < Product.(id)
    Ref: Shipment.(vendor_id) < Vendor.(id)
